Relative paths are created