@@ -13,7 +13,10 @@ import org.elasticsearch.plugins.PluginsService;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -72,7 +75,21 @@ public class EmbeddedElastic {
         public PluginNode(Map<String, String> preparedSettings) {
             super(
                     InternalSettingsPreparer.prepareEnvironment(Settings.EMPTY, preparedSettings, null, () -> "node-test"),
-                    settings -> new PluginsService(settings, null, null, Path.of("src/test/java/com/itechart/plugin")),
+                    settings -> {
+                        URL resource = EmbeddedElastic.class.getClassLoader().getResource("elasticsearch/plugins");
+                        Path path = null;
+                        try {
+                            if (resource != null) path = Paths.get(resource.toURI());
+                        } catch (URISyntaxException e) {
+                            throw new RuntimeException(e);
+                        }
+                        return new PluginsService(
+                                settings,
+                                null,
+                                null,
+                                path
+                        );
+                    },
                     false
             );
             log.info("Started local elastic");
